// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Img /> renders correctly with default props 1`] = `
<picture
  className=""
>
  <img
    alt="photos alexander dummer 150646"
    className="img"
    src="https://policygenius-images.imgix.net/photos/alexander-dummer-150646.jpg?w=768&h=768&fit=clip&auto=format&auto=compress"
    title="photos alexander dummer 150646"
  />
</picture>
`;

exports[`<Img /> renders correctly with given imgix picture source props 1`] = `
<picture
  className=""
>
  <source
    media="(max-width: 767px)"
    srcSet="https://policygenius-images.imgix.net/small?w=767&h=768&fit=clip&auto=format&auto=compress"
  />
  <source
    media="(max-width: 1024px)"
    srcSet="https://policygenius-images.imgix.net/medium?w=1024&h=768&fit=clip&auto=format&auto=compress"
  />
  <img
    alt="default"
    className="img"
    desktopImgixSrc="large"
    src="https://policygenius-images.imgix.net/default?w=768&h=768&fit=clip&auto=format&auto=compress"
    title="default"
  />
</picture>
`;

exports[`<Img /> renders correctly with given imgix props 1`] = `
<picture
  className="cool-class"
>
  <img
    alt="photos are cool"
    className="img"
    src="https://policygenius-images.imgix.net/photos/are-cool.jpg?w=768&h=768&fit=clip&auto=format&auto=compress"
    title="photos are cool"
  />
</picture>
`;

exports[`<Img /> renders correctly with given regular picture source props 1`] = `
<picture
  className=""
>
  <source
    media="(max-width: 767px)"
    srcSet="small"
  />
  <source
    media="(max-width: 1024px)"
    srcSet="medium"
  />
  <img
    alt="default"
    className="img"
    desktopSrc="large"
    src="default"
    title="default"
  />
</picture>
`;

exports[`<Img /> renders correctly with given regular props 1`] = `
<picture
  className="cool-class"
>
  <img
    alt="alt"
    className="img"
    src="some-url"
    title="title"
  />
</picture>
`;

exports[`<Img /> renders with hide classes when null src props are provided 1`] = `
<picture
  className="hide-mobile-image hide-tablet-image"
>
  <img
    alt="default"
    className="img"
    desktopImgixSrc="large"
    src="https://policygenius-images.imgix.net/default?w=768&h=768&fit=clip&auto=format&auto=compress"
    title="default"
  />
</picture>
`;
